# sarf

./: .gitignore  Cargo.toml  PRIVACY.md  README.md
backend/: analyzer.py  main.py  requirements.txt
backend/tests/: test_analyzer.py
docs/: CONSTRAINTS_2026-03-03_camel-integration.md  CONSTRAINTS_2026-03-19_pyodide-integration.md  CONSTRAINTS_2026-03-20_pyodide-fix.md
docs/current-plans/: CAMEL_INTEGRATION_IMPLEMENTATION_STATUS.md  CAMEL_PRESENTATION_FIX.md  COMPACT_SCRIPT_FIX_PLAN.md  DIALECT_DICTIONARY_SEPARATION.md  DIALECT_DICT_IMPLEMENTATION_STATUS.md  DICT_OPTIMIZATION_IMPLEMENTATION_STATUS.md  DICT_SELECTION_IMPLEMENTATION_STATUS.md  HOVER_TOOLTIP_IMPLEMENTATION_STATUS.md  MORPH_ANALYSIS_IMPLEMENTATION_STATUS.md  POS_LANGUAGE_IMPLEMENTATION_STATUS.md  PYODIDE_INTEGRATION_HANDOFF.md  PYODIDE_INTEGRATION_STATUS.md  PYODIDE_PROTOTYPE_STATUS.md  SCAFFOLDING_IMPLEMENTATION_STATUS.md  TOOLTIP_IMPROVEMENTS_IMPLEMENTATION_STATUS.md  V1_1_0_IMPLEMENTATION_STATUS.md  WIKTIONARY_IMPLEMENTATION_STATUS.md
extension/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wxt.config.ts
extension/assets/: tooltip.css
extension/entrypoints/: background.ts  content.ts
extension/lib/: alkhalil.ts  arabic.ts  cache.ts  camel.ts  debounce.ts  dict-prefs.ts  dict-store.ts  dictionary.ts  farasa.ts  filter.ts  hit-test.ts  pos-translate.ts  stream-types.ts  (+3 more)
prototype/: background.js  content.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js
scripts/: build-dialect-wiktionary.ts  build-wiktionary.ts  compact-dictionaries.ts
src/: lib.rs
(+31 files in other folders)
